--- a/cv/index.html
+++ b/cv/index.html
@@ -200,7 +200,8 @@
                                     </div>
                                 </li>
                                  <!-- More education items... -->
-
+    </div>
+                    </div>
 
                                 <!-- professional experience items... -->
 <a class="anchor" id="Professional Experience"></a>
