--- a/index.html
+++ b/index.html
@@ -43,26 +43,25 @@
           <span class="icon-bar bottom-bar"></span>
         </button>
         <!-- Navigation links -->
-        <div class="collapse navbar-collapse text-right" id="navbarNav">
-          <ul class="navbar-nav ml-auto flex-nowrap">
-            <li class="nav-item active">
-             <a class="nav-link" href="/">about me<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="/blog/">blog</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="/sustainability/">publications</a>
-                    </li>
-                    <li class="nav-item ">
+                <div class="collapse navbar-collapse text-right" id="navbarNav">
+                    <ul class="navbar-nav ml-auto flex-nowrap">
+                        <!-- Navigation items -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">about</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/blog/">blog</a>
+                        </li>
+                        <li class="nav-item ">
                         <a class="nav-link" href="/projects/">projects</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="/repositories/">repositories</a>
+                       <li class="nav-item ">
+                        <a class="nav-link" href="/publications/">research</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="/cv/">cv</a>
                       </li>
+                        <!-- More navigation items... -->
    
             <!-- Other navigation items -->
             <!-- ... -->
@@ -110,9 +109,9 @@
         </div>
         <div class="clearfix">
           <!-- Profile introduction -->
-           From the bustling streets of Shanghai to the innovative hubs of Los Angeles, and now Seattle, my journey has been nothing short of transformative. 
-          My foundation in Social Entrepreneurship at USC instilled in me a deep-seated belief: businesses can, and should, be a force for good.
-          Join me as I continue to blend technology, sustainability, and business. With a heart full of passion and a mindset geared towards constant growth, I'm excited to shape a more inclusive and sustainable future.
+           From the bustling streets of Shanghai to the innovative hubs of Los Angeles, and now Seattle, my journey has been nothing short of transformative. <br>
+          My foundation in Social Entrepreneurship at USC instilled in me a deep-seated belief: businesses can, and should, be a force for good.<br>
+          Join me as I continue to blend technology, sustainability, and business. With a heart full of passion and a mindset geared towards constant growth, I'm excited to shape a more inclusive and sustainable future.<br>
  This site is under **construction!**
         </div>
         <!-- News section -->
