--- a/publications/index.html
+++ b/publications/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Metadata -->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!-- ... (other meta tags) ... -->
-  <title>Publications Research | Flora Lan</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <meta name="description" content="Selected publications">
+  <meta name="keywords" content="ESG, DATA ANALYTICS, INNOVATION DISTRICT, INDUSTRY CLUSTER, CITY PLANNING">
+   <title>Publications Research | Flora Lan</title>
+  <meta name="author" content="Flora Lan">
+  <meta property="og:site_name" content="Flora Lan">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Flora Lan | Publications">
+  <meta property="og:url" content="https://floritazhao.github.io/publications/">
+
   <!-- ... (other meta tags) ... -->
   <!-- Structured data script -->
   <script type="application/ld+json">
@@ -29,6 +41,7 @@
   <link rel="canonical" href="https://george-gca.github.io/publications/">
   <link rel="stylesheet" href="/assets/css/jekyll-pygments-themes-native.css?e74e74bf055e5729d44a7d031a5ca6a5" media="none" id="highlight_theme_dark">
   <!-- Theme scripts -->
+
   <script src="/assets/js/theme.js?96d6b3e1c3604aca8b6134c7afdd5db6"></script>
   <script src="/assets/js/dark_mode.js?9b17307bb950ffa2e34be0227f53558f"></script>
   <!-- Google Analytics -->
@@ -38,6 +51,10 @@
     window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-J7KHS011G7");
   </script>
 </head>
+
+
+
+  
 <body class="fixed-top-nav ">
   <!-- Header section -->
 <!-- 导航栏开始 -->
