--- a/publications/index.html
+++ b/publications/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-  <meta name="description" content="Selected publications">
-  <meta name="keywords" content="ESG, DATA ANALYTICS, INNOVATION DISTRICT, INDUSTRY CLUSTER, CITY PLANNING">
-   <title>Publications Research | Flora Lan</title>
-  <meta name="author" content="Flora Lan">
-  <meta property="og:site_name" content="Flora Lan">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Flora Lan | Publications">
-  <meta property="og:url" content="https://floritazhao.github.io/publications/">
-
-  <!-- ... (other meta tags) ... -->
+    <!-- Meta information -->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    
+    <!-- Page title and metadata -->
+    <title>Publications | Flora Lan</title>
+    <meta name="author" content="Flora Lan">
+    <meta name="description" content="Selected publications">
+    <meta name="keywords" content="ESG, CSR, IMPACT, SUSTAINABILITY, INNOVATION DISTRICTS, INDUSTY CLUSTER, INNOVATION ECOSYSTEM">
+    <meta property="og:site_name" content="Flora Lan">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Flora Lan | Publications">
+    <meta property="og:url" content="https://floritazhao.github.io/">
+    <meta property="og:description" content="descriptions.publications">
+    <meta property="og:locale" content="en">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Publications">
+    <meta name="twitter:description" content="descriptions.publications">
+    
+ 
   <!-- Structured data script -->
   <script type="application/ld+json">
     {
@@ -28,28 +34,32 @@
       "author": {"@type": "Person", "name": "Flora Lan"},
       "description": "descriptions.publications",
       "headline": "Research",
+       "sameAs": [
+            "https://orcid.org/0000-0002-7658-2786",
+            "https://scholar.google.com/citations?user=kSVOrakAAAAJ",
+            "http://lattes.cnpq.br/8522827733075951",
+            "https://www.researchgate.net/profile/George-De-Araujo",
+            "https://github.com/george-gca",
+            "https://www.linkedin.com/in/georgecdearaujo",
+            "https://dblp.org/pid/331/0630.html"
+        ]
     }
   </script>
   <!-- External CSS stylesheets -->
-  <link rel="stylesheet" href="/assets/css/bootstrap.min.css?a4b3f509e79c54a512b890d73235ef04">
-  <link rel="stylesheet" href="/assets/css/mdb.min.css?62a43d1430ddb46fc4886f9d0e3b49b8">
-  <link defer rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.css">
-  <link rel="stylesheet" href="/assets/css/academicons.min.css?f0b7046b84e425c55f3463ac249818f5">
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:100,300,400,500,700|Material+Icons">
-  <link rel="stylesheet" href="/assets/css/jekyll-pygments-themes-github.css?19f3075a2d19613090fe9e16b564e1fe" media="" id="highlight_theme_light">
-  <link rel="stylesheet" href="/assets/css/main.css?d41d8cd98f00b204e9800998ecf8427e">
-  <link rel="canonical" href="https://george-gca.github.io/publications/">
-  <link rel="stylesheet" href="/assets/css/jekyll-pygments-themes-native.css?e74e74bf055e5729d44a7d031a5ca6a5" media="none" id="highlight_theme_dark">
+<link rel="stylesheet" href="/assets/css/bootstrap.min.css?a4b3f509e79c54a512b890d73235ef04">
+<link rel="stylesheet" href="/assets/css/mdb.min.css?62a43d1430ddb46fc4886f9d0e3b49b8">
+<link defer rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.css">
+<link rel="stylesheet" href="/assets/css/academicons.min.css?f0b7046b84e425c55f3463ac249818f5">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:100,300,400,500,700|Material+Icons">
+<link rel="stylesheet" href="/assets/css/jekyll-pygments-themes-github.css?19f3075a2d19613090fe9e16b564e1fe" media="" id="highlight_theme_light">
+<link rel="stylesheet" href="/assets/css/main.css?d41d8cd98f00b204e9800998ecf8427e">
+<link rel="canonical" href="https://george-gca.github.io/publications/">
+<link rel="stylesheet" href="/assets/css/jekyll-pygments-themes-native.css?e74e74bf055e5729d44a7d031a5ca6a5" media="none" id="highlight_theme_dark">
   <!-- Theme scripts -->
 
   <script src="/assets/js/theme.js?96d6b3e1c3604aca8b6134c7afdd5db6"></script>
   <script src="/assets/js/dark_mode.js?9b17307bb950ffa2e34be0227f53558f"></script>
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J7KHS011G7"></script>
-  <script>
-    function gtag(){window.dataLayer.push(arguments)}
-    window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-J7KHS011G7");
-  </script>
+ 
 </head>
 
 
