--- a/publications/index.html
+++ b/publications/index.html
@@ -158,7 +158,7 @@
                 <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="assets/img/publication_preview/AI-industry-geographic-insight.webp"></source>
                 <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="assets/img/publication_preview/AI-industry-geographic-insight.webp"></source>
                 <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="assets/img/publication_preview/AI-industry-geographic-insight.webp"></source>
-                <img src="assets/img/publication_preview/AI industry geographic insight.png" class="preview z-depth-1 rounded" width="auto" height="auto" alt="AI industry geographic insight" data-zoomable="" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                <img src="assets/img/publication_preview/AIgeographic.png" class="preview z-depth-1 rounded" width="auto" height="auto" alt="AI industry geographic insight" data-zoomable="" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
               </picture>
             </figure>
           </div>
