--- a/publications/index.html
+++ b/publications/index.html
@@ -34,15 +34,7 @@
       "author": {"@type": "Person", "name": "Flora Lan"},
       "description": "descriptions.publications",
       "headline": "Research",
-       "sameAs": [
-            "https://orcid.org/0000-0002-7658-2786",
-            "https://scholar.google.com/citations?user=kSVOrakAAAAJ",
-            "http://lattes.cnpq.br/8522827733075951",
-            "https://www.researchgate.net/profile/George-De-Araujo",
-            "https://github.com/george-gca",
-            "https://www.linkedin.com/in/georgecdearaujo",
-            "https://dblp.org/pid/331/0630.html"
-        ]
+      
     }
   </script>
   <!-- External CSS stylesheets -->
@@ -154,12 +146,13 @@
         <div class="row">
           <div class="col-sm-2 preview">
             <figure>
-              <picture>
-                <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="assets/img/publication_preview/AI-industry-geographic-insight.webp"></source>
-                <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="assets/img/publication_preview/AI-industry-geographic-insight.webp"></source>
-                <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="assets/img/publication_preview/AI-industry-geographic-insight.webp"></source>
-                <img src="assets/img/publication_preview/AIgeographic.png" class="preview z-depth-1 rounded" width="auto" height="auto" alt="AI industry geographic insight" data-zoomable="" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
-              </picture>
+             <picture>
+    <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="assets/img/publication_preview/AI-industry-geographic-insight.webp"></source>
+    <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="assets/img/publication_preview/AI-industry-geographic-insight.webp"></source>
+    <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="assets/img/publication_preview/AI-industry-geographic-insight.webp"></source>
+    <img src="assets/img/publication_preview/AI-industry-geographic-insight.webp" class="preview z-depth-1 rounded" width="auto" height="auto" alt="AI industry geographic insight" data-zoomable="" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+</picture>
+
             </figure>
           </div>
           <div id="https://mp.weixin.qq.com/s/vO4MsZAUZDx2QGCbTgj_GQ" class="col-sm-8">
