--- a/cv/index.html
+++ b/cv/index.html
@@ -362,10 +362,10 @@
                             <tbody>
                                 <tr>
                                     <td style="vertical-align: top; text-align: center;" class="institution"><i class="fa-solid fa-building"></i></td>
-                                    <td class="institution">INDT - Greennovate</td>
+                                    <td class="institution">    Greennovate</td>
                                        </tr>
                                                 <tr> <td style="vertical-align: top; text-align: center;" class="department"><i class="far fa-dot-circle icondepartment"></i></td>
-                                                        <td class="department">INDT - Greennovate is a social enterprise that promotes sustainability in businesses and communities in China.</td> 
+                                                        <td class="department">    Greennovate is a social enterprise that promotes sustainability in businesses and communities in China.</td> 
                                             </tr>
                              
                             </tbody>
