--- a/index.html
+++ b/index.html
@@ -124,30 +124,15 @@
               <tr>
                 <th scope="row">Sep 4, 2023</th>
                 <td>
-                  I just launched this personal website!
+                  <p><a style="color: inherit;">I just launched this personal website!</a></p>
                 </td>
               </tr>
               <!-- ... More news entries ... -->
             </table>
           </div>
         </div>
-        <!-- Latest posts section -->
-        <h2><a href="/blog/" style="color: inherit;">latest posts</a></h2>
-        <div class="news">
-          <div class="table-responsive" style="max-height: 60vw">
-            <!-- Latest posts table -->
-            <table class="table table-sm table-borderless">
-              <!-- Post entries -->
-              <tr>
-                <th scope="row">August 25, 2023</th>
-                <td>
-                  <a class="news-title" href="blog/2015/math/index.html">Testing Testing</a>
-                </td>
-              </tr>
-              <!-- ... More post entries ... -->
-            </table>
-          </div>
-        </div>
+
+        
         <!-- Social and contact information -->
         <div class="social">
           <div class="contact-icons">
