--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <table class="table table-sm table-borderless">
               <!-- News entries -->
               <tr>
-                <th scope="row">Sep 4, 2023</th>
+                <th scope="row"><a style="color: inherit;">Sep 4, 2023</a></th>
                 <td>
                   <p><a style="color: inherit;">I just launched this personal website!</a></p>
                 </td>
