--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 
                     <figure>
                         <picture>
-                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/avatar-480.webp">
-                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/avatar-800.webp">
-                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/avatar-1400.webp">
-                            <img src="/assets/img/avatar.png" class="img-fluid z-depth-1 rounded-circle" width="auto" height="auto" alt="avatar.png" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="assets/img/floraavantar.webp">
+                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="assets/img/floraavantar.webp">
+                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="assets/img/floraavantar.webp">
+                            <img src="assets/img/FloraAvantar.png" class="img-fluid z-depth-1 rounded-circle" width="auto" height="auto" alt="avatar.png" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                         </picture>
                     </figure>
                 </div>
