--- a/cv/index.html
+++ b/cv/index.html
@@ -9,10 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <!-- Page title and metadata -->
-    <title>CV | Flora Ffeifei Lan</title>
-    <meta name="author" content="Dima Bykhovsky">
-    <meta name="description" content="Academic blog and publication platform for things I want to share.">
-    <meta name="keywords" content="jekyll, jekyll-theme, academic-website, portfolio-website">
+   <title>Flora Lan</title>
+    <meta name="author" content="Flora Lan">
+    <meta name="description" content="Personal blog and publication platform for things I want to share">
+    <meta name="keywords" content="ESG, CSR, IMPACT, SUSTAINABILITY, INNOVATION DISTRICTS, INDUSTRY CLUSTER, INNOVATION ECOSYSTEM">
     
     <!-- External CSS stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-DF7Zhf293AJxJNTmh5zhoYYIMs2oXitRfBjY+9L//AY=" crossorigin="anonymous">
