--- a/projects/index.html
+++ b/projects/index.html
@@ -237,4 +237,23 @@
     <script type="text/javascript">window.MathJax={tex:{tags:"ams"}};</script>
     <script defer type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3.2.0/es5/tex-mml-chtml.js"></script>
     <script defer src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script type="text/javascript">function progressBarSetup(){"max"in document.createElement("progress")?(initializeProgressElement(),$(document).on("scroll",function(){progressBar.attr({value:getCurrentScrollPosition()})}),$(window).on("resize",initializeProgressElement)):(resizeProgressBar(),$(document).on("scroll",resizeProgressBar),$(window).on("resize",resizeProgressBar))}function getCurrentScrollPosition(){return $(window).scrollTop()}function initializeProgressElement(){let e=$("#navbar").outerHeight(!0);$("body").css({"padding-top":e}),$("progress-container").css({"padding-top":e}),progressBar.css({top:e}),progressBar.attr({max:getDistanceToScroll(),value:getCurrentScrollPosition()})}function getDistanceToScroll(){return $(document).height()-$(window).height()}function resizeProgressBar(){progressBar.css({width:getWidthPercentage()+"%"})}function getWidthPercentage(){return
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ERXV632H8W"></script>
+    <script>
+        function gtag() { window.dataLayer.push(arguments); }
+        window.dataLayer = window.dataLayer || [];
+        gtag("js", new Date);
+        gtag("config", "G-ERXV632H8W");
+    </script>
+    <!-- Progress bar setup script -->
+    <script type="text/javascript">
+        function progressBarSetup() {
+            // Setup progress bar based on scroll position
+            // More setup code...
+        }
+        // Call progressBarSetup on window load
+        window.onload = function() {
+            setTimeout(progressBarSetup, 50);
+        };
+    </script>
+</body>
+</html>
