--- a/projects/index.html
+++ b/projects/index.html
@@ -116,10 +116,10 @@
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/12-480.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/12-800.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/12-1400.webp"></source>
-                                            <img src="/assets/img/12.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/al-folio/assets/img/12-480.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/al-folio/assets/img/12-800.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/al-folio/assets/img/12-1400.webp"></source>
+                                            <img src="/al-folio/assets/img/12.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
@@ -138,10 +138,10 @@
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/3-480.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/3-800.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/3-1400.webp"></source>
-                                            <img src="/assets/img/3.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/al-folio/assets/img/3-480.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/al-folio/assets/img/3-800.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/al-folio/assets/img/3-1400.webp"></source>
+                                            <img src="/al-folio/assets/img/3.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
@@ -160,10 +160,10 @@
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/7-480.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/7-800.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/7-1400.webp"></source>
-                                            <img src="/assets/img/7.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/al-folio/assets/img/7-480.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/al-folio/assets/img/7-800.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/al-folio/assets/img/7-1400.webp"></source>
+                                            <img src="/al-folio/assets/img/7.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
@@ -189,10 +189,10 @@
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/1-480.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/1-800.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/1-1400.webp"></source>
-                                            <img src="/assets/img/1.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/al-folio/assets/img/1-480.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/al-folio/assets/img/1-800.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/al-folio/assets/img/1-1400.webp"></source>
+                                            <img src="/al-folio/assets/img/1.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
@@ -224,13 +224,13 @@
     <script src="https://cdn.jsdelivr.net/npm/mdbootstrap@4.20.0/js/mdb.min.js" integrity="sha256-NdbiivsvWt7VYCt6hYNT3h/th9vSTL4EDWeGs5SN3DA=" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha256-Nn1q/fx0H7SNLZMQ5Hw5JLaTRZp0yILA/FRexe19VdI=" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-    <script defer src="/al-folio/assets/js/masonry.js" type="text/javascript"></script>
+    <script defer src="/assets/js/masonry.js" type="text/javascript"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.8/dist/medium-zoom.min.js" integrity="sha256-7PhEpEWEW0XXQ0k6kQrPKwuoIomz8R8IYyuU1Qew4P8=" crossorigin="anonymous"></script>
-    <script defer src="/al-folio/assets/js/zoom.js"></script>
+    <script defer src="/assets/js/zoom.js"></script>
     <script defer src="https://unpkg.com/bootstrap-table@1.21.4/dist/bootstrap-table.min.js"></script>
     <script src="/al-folio/assets/js/no_defer.js?d633890033921b33e0ceb13d22340a9c"></script>
-    <script defer src="/al-folio/assets/js/common.js?acdb9690d7641b2f8d40529018c71a01"></script>
-    <script defer src="/al-folio/assets/js/copy_code.js?c9d9dd48933de3831b3ee5ec9c209cac" type="text/javascript"></script>
+    <script defer src="/assets/js/common.js"></script>
+    <script defer src="/assets/js/copy_code.js" type="text/javascript"></script>
     <script async src="https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js"></script>
     <script async src="https://badge.dimensions.ai/badge.js"></script>
     <script type="text/javascript">window.MathJax={tex:{tags:"ams"}};</script>
