--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
  
   <!-- Page title and metadata -->
-   <title>Flora Lan</title>
+   <title>Project|Flora Lan</title>
     <meta name="author" content="Flora Lan">
     <meta name="description" content="Personal blog and publication platform for things I want to share">
     <meta name="keywords" content="ESG, CSR, IMPACT, SUSTAINABILITY, INNOVATION DISTRICTS, INDUSTRY CLUSTER, INNOVATION ECOSYSTEM">
@@ -116,10 +116,10 @@
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/al-folio/assets/img/12-480.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/al-folio/assets/img/12-800.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/al-folio/assets/img/12-1400.webp"></source>
-                                            <img src="/al-folio/assets/img/12.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/12-480.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/12-800.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/12-1400.webp"></source>
+                                            <img src="/assets/img/12.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
@@ -138,10 +138,10 @@
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/al-folio/assets/img/3-480.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/al-folio/assets/img/3-800.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/al-folio/assets/img/3-1400.webp"></source>
-                                            <img src="/al-folio/assets/img/3.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/3-480.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/3-800.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/3-1400.webp"></source>
+                                            <img src="/assets/img/3.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
@@ -160,10 +160,10 @@
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/al-folio/assets/img/7-480.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/al-folio/assets/img/7-800.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/al-folio/assets/img/7-1400.webp"></source>
-                                            <img src="/al-folio/assets/img/7.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/7-480.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/7-800.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/7-1400.webp"></source>
+                                            <img src="/assets/img/7.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
@@ -189,10 +189,10 @@
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/al-folio/assets/img/1-480.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/al-folio/assets/img/1-800.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/al-folio/assets/img/1-1400.webp"></source>
-                                            <img src="/al-folio/assets/img/1.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/1-480.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/1-800.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/1-1400.webp"></source>
+                                            <img src="/assets/img/1.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
