--- a/index.html
+++ b/index.html
@@ -118,17 +118,24 @@
 
         </div>
         <!-- News section -->
-        <h2><a href="/news/" style="color: inherit;">What's Up!</a></h2>
+        <h2><a style="color: inherit;">What's Up!</a></h2>
         <div class="news">
           <div class="table-responsive" style="max-height: 60vw">
             <!-- News table -->
             <table class="table table-sm table-borderless">
- <!-- News entries -->
               <tbody>
+<!-- News entries -->
                 <tr>
                 <th scope="row"><a style="color: inherit;">Sep 4, 2023</a></th>
                 <td>
                   <p><a style="color: inherit;">I just launched this personal website!</a></p>
+                </td>
+              </tr>
+<!-- News entries -->
+                <tr>
+                <th scope="row"><a style="color: inherit;">Sep 8, 2023</a></th>
+                <td>
+                  <p><a href="https://floritazhao.github.io/blob/gh-pages/blog/202309/on-writing/index.html" style="color: inherit;">Read my new post</a></p>
                 </td>
               </tr>
 <!-- ... More news entries ... -->
