--- a/projects/index.html
+++ b/projects/index.html
@@ -112,14 +112,14 @@
                        
  <!-- Project 1 -->
                         <div class="grid-item">
-                            <a href="/al-folio/projects/1_project/">
+                            <a href="/projects/1_project/">
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/12-480.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/12-800.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/12-1400.webp"></source>
-                                            <img src="/assets/img/12.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://simg.douban.com/view/photo/l/2QTYOx_dvijHTT3diYrNVA/4879685/x2639020565.jpg"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://simg.douban.com/view/photo/l/2QTYOx_dvijHTT3diYrNVA/4879685/x2639020565.jpg"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://simg.douban.com/view/photo/l/2QTYOx_dvijHTT3diYrNVA/4879685/x2639020565.jpg"></source>
+                                            <img src="https://simg.douban.com/view/photo/l/2QTYOx_dvijHTT3diYrNVA/4879685/x2639020565.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
