--- a/projects/index.html
+++ b/projects/index.html
@@ -116,10 +116,10 @@
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
-                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://simg.douban.com/view/photo/l/2QTYOx_dvijHTT3diYrNVA/4879685/x2639020565.jpg"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://simg.douban.com/view/photo/l/2QTYOx_dvijHTT3diYrNVA/4879685/x2639020565.jpg"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://simg.douban.com/view/photo/l/2QTYOx_dvijHTT3diYrNVA/4879685/x2639020565.jpg"></source>
-                                            <img src="https://simg.douban.com/view/photo/l/2QTYOx_dvijHTT3diYrNVA/4879685/x2639020565.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540371.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540371.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540371.webpg"></source>
+                                            <img src="https://img2.doubanio.com/view/photo/l/public/p2313540371.webp" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                                         </picture>
                                     </figure>
                                     <div class="card-body">
