--- a/projects/1_project/index.html
+++ b/projects/1_project/index.html
@@ -111,9 +111,13 @@
 
                 <div class="row">
             <div class="col-sm mt-3 mt-md-0">
-                <figure>
-                    <img src="https://img1.doubanio.com/view/photo/l/public/p2898551000.jpg" class="img-fluid rounded z-depth-1" alt="example image">
-                </figure>
+
+                    <figure>
+                        <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540371.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540371.webp"></source>
+                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540371.webpg"></source>
+                                            <img src="https://img2.doubanio.com/view/photo/l/public/p2313540371.webp" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+                                </figure>
             </div>
             <div class="col-sm mt-3 mt-md-0">
                 <figure>
