--- a/projects/1_project/index.html
+++ b/projects/1_project/index.html
@@ -113,43 +113,32 @@
 
 <!-- 开始搞图片 -->
 
-                <div class="row">
-            <div class="col-sm mt-3 mt-md-0">
 
-                    <figure>
-                        <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540371.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540371.webp"></source>
-                                            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540371.webpg"></source>
-                                            <img src="https://img2.doubanio.com/view/photo/l/public/p2313540371.webp" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
-                                </figure>
-            </div>
- 
 
 
              <div class="row mt-3">
       <div class="col-sm mt-3 mt-md-0">
         <figure>
           <picture>
-            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/9-480.webp"></source>
-            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/9-800.webp"></source>
-            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/9-1400.webp"></source>
-            <img src="/assets/img/9.jpg" class="img-fluid rounded z-depth-1" width="auto" height="auto" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://img1.doubanio.com/view/photo/l/public/p2898550998.webp"></source>
+            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://img1.doubanio.com/view/photo/l/public/p2898550998.webp"></source>
+            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://img1.doubanio.com/view/photo/l/public/p2898550998.webp"></source>
+            <img src="https://img1.doubanio.com/view/photo/l/public/p2898550998.webp" class="img-fluid rounded z-depth-1" width="auto" height="auto" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
           </picture>
         </figure>
       </div>
       <div class="col-sm mt-3 mt-md-0">
         <figure>
           <picture>
-            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/7-480.webp"></source>
-            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/7-800.webp"></source>
-            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/7-1400.webp"></source>
-            <img src="/assets/img/7.jpg" class="img-fluid rounded z-depth-1" width="auto" height="auto" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+            <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://img1.doubanio.com/view/photo/l/public/p2898551000.webp"></source>
+            <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://img1.doubanio.com/view/photo/l/public/p2898551000.webp"></source>
+            <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://img1.doubanio.com/view/photo/l/public/p2898551000.webp"></source>
+            <img src="https://img1.doubanio.com/view/photo/l/public/p2898551000.webp" class="img-fluid rounded z-depth-1" width="auto" height="auto" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
           </picture>
         </figure>
       </div>
     </div>
 
-         
  <!-- 开始搞图片配文 -->
         
         <div class="caption">Chai Jing's review: Under the Dome – Investigating China’s Smog</div>
