--- a/projects/1_project/index.html
+++ b/projects/1_project/index.html
@@ -127,6 +127,11 @@
       <div class="col-sm mt-3 mt-md-0">
         <figure>
           <picture>
+
+               <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://img1.doubanio.com/view/photo/l/public/p2313540318.webp"></source>
+                <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://img1.doubanio.com/view/photo/l/public/p2313540318.webp"></source>
+                 <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://img1.doubanio.com/view/photo/l/public/p2313540318.webp"></source>
+       
                <img src="https://img1.doubanio.com/view/photo/l/public/p2313540318.webp" class="img-fluid rounded z-depth-1" width="auto" height="auto" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
           </picture>
         </figure>
