--- a/projects/1_project/index.html
+++ b/projects/1_project/index.html
@@ -130,10 +130,10 @@
       <div class="col-sm mt-3 mt-md-0">
         <figure>
           <picture>
-               <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540318.webp"></source>
-                <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540318.webp"></source>
-                 <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2313540318.webp"></source>
-               <img src="https://img2.doubanio.com/view/photo/l/public/p2313540318.webp" class="img-fluid rounded z-depth-1" width="auto" height="auto" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+               <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2898562831.webp"></source>
+                <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2898562831.webp"></source>
+                 <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2898562831.webp"></source>
+               <img src="https://img2.doubanio.com/view/photo/l/public/p2898562831.webp" class="img-fluid rounded z-depth-1" width="auto" height="auto" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
           </picture>
         </figure>
       </div>
@@ -164,10 +164,19 @@
 This is precisely because it touched on a pain point for the Chinese public—smog. Through animation, we successfully presented this severe issue in an intuitive and easily understandable manner. This not only enhanced people's awareness of environmental issues but also stimulated their willingness to take action.
             </p>
 
-            <div class="col-sm mt-3 mt-md-0">
-    <figure>
-        <img src="https://img1.doubanio.com/view/photo/l/public/p2898551279.jpg" class="img-fluid rounded z-depth-1" width="auto" height="auto" title="example image" onerror="this.onerror=null;">
-    </figure>
+
+                       <div class="row mt-3">
+      <div class="col-sm mt-3 mt-md-0">
+        <figure>
+          <picture>
+           <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2898562857.webp"></source>
+                <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2898562857.webp"></source>
+                 <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="https://img2.doubanio.com/view/photo/l/public/p2898562857.webp"></source>
+               <img src="https://img2.doubanio.com/view/photo/l/public/p2898562857.webp" class="img-fluid rounded z-depth-1" width="auto" height="auto" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+          </picture>
+        </figure>
+      </div>
+                           
 </div>
 
 
