--- a/projects/index.html
+++ b/projects/index.html
@@ -148,7 +148,7 @@
                                     </figure>
                                     <div class="card-body">
                                         <h2 class="card-title text-lowercase">GreenLiving Challenge with Alibaba</h2>
-                                        <p class="card-text">An Interactive Game to Raise Awareness of Eco-Friendly Building Materials</p>
+                                        <p class="card-text">An Interactive Game to Raise Awareness of Eco Materials</p>
                                         <div class="row ml-1 mr-1 p-0"></div>
                                     </div>
                                 </div>
@@ -176,7 +176,7 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
+             
 
       <!-- Project 4 -->
                              <div class="grid-sizer"></div>
