--- a/projects/index.html
+++ b/projects/index.html
@@ -136,7 +136,7 @@
  <!-- Project 2 -->
                         <div class="grid-sizer"></div>
                         <div class="grid-item">
-                            <a href="/al-folio/projects/2_project/">
+                            <a href="projects/2_project/">
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
@@ -158,7 +158,7 @@
  <!-- Project 3 -->
                         <div class="grid-sizer"></div>
                         <div class="grid-item">
-                            <a href="https://unsplash.com" rel="external nofollow noopener" target="_blank">
+                            <a href="/projects/3_project/" rel="external nofollow noopener" target="_blank">
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
