--- a/projects/ford_level_up/index.html
+++ b/projects/ford_level_up/index.html
@@ -156,7 +156,8 @@ My Role in the project: project manager, trainer, content developer, curriculum 
 
 
           <h2>2: Our Approach</h2>
-            <p>As one of the initiators of the project, Greennovate not only proposed the program's brand name "Level Up," but also developed a majority part of a three-day course tailored to the specific needs of environmental organizations at different stages. These courses cover a range of topics, including fundraising, public welfare marketing, and organizational development.<br>
+            <p>As one of the initiators of the project, Greennovate not only proposed the program's brand name "Level Up," but also developed a majority part of a three-day course tailored to the specific needs of environmental organizations at different stages.<br>
+             These courses cover a range of topics, including fundraising, NGO marketing, and organizational development.<br>
               <br>
             </p>
 
@@ -212,7 +213,7 @@ My Role in the project: project manager, trainer, content developer, curriculum 
 
  <!-- 开始搞图片配文 -->
         
-        <div class="caption">Course Developed and Delievered by Me</div>
+        <div class="caption">Course Developed and Delievered by Me <br></div>
 
        
 
