--- a/projects/index.html
+++ b/projects/index.html
@@ -131,7 +131,7 @@ Over these years, from green office to SDG videos, from CSR strategy to innovati
                                         </picture>
                                     </figure>
                                     <div class="card-body">
-                                        <h2 class="card-title text-lowercase">Under the Dome beyond Air Pollution</h2>
+                                        <h2 class="card-title">Under the Dome: beyond Air Pollution</h2>
                                         <p class="card-text">A Documentary with Billions of Views</p>
                                         <div class="row ml-1 mr-1 p-0"></div>
                                     </div>
